<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="275dp"
        android:orientation="vertical"
        android:background="#CECED6"
        tools:context="jamiesmyth.theoraclemain.FixtureStatActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="6dp">


            <android.support.v7.widget.CardView
                android:id="@+id/Away_Form"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".2"
                android:layout_margin="6dp"
                card_view:cardCornerRadius="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/Away_Text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/away_form"
                        android:layout_weight=".75"
                        android:gravity="center"
                        android:paddingLeft="30dp"
                        android:textAppearance="?android:attr/textAppearanceMedium"/>

                    <TextView
                        android:id="@+id/Number_Of_Matches_Away"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/not_applicable"
                        android:layout_weight=".25"
                        android:gravity="center"
                        android:textAppearance="?android:attr/textAppearanceMedium"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal"
                android:layout_weight=".4">

                <android.support.v7.widget.CardView
                    android:id="@+id/Btts_Away"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".33"
                    android:layout_margin="6dp"
                    card_view:cardCornerRadius="4dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/Btts_Away_Text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight=".25"
                            android:gravity="center"
                            android:text="@string/btts"
                            android:textAppearance="?android:attr/textAppearanceSmall"/>

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="35dp"
                            android:layout_weight=".55">

                            <ProgressBar
                                android:id="@+id/Btts_Away_Percentage_Bar"
                                style="?android:attr/progressBarStyleHorizontal"
                                android:layout_width="120dp"
                                android:layout_height="150dp"
                                android:indeterminate="false"
                                android:max="100"
                                android:progress="0"
                                android:layout_centerInParent="true"
                                android:progressDrawable="@drawable/circular"
                                android:secondaryProgress="100"
                                />

                            <TextView
                                android:id="@+id/Btts_Away_Percentage_Text"
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:gravity="center"
                                android:text="@string/not_applicable"
                                android:layout_centerInParent="true"
                                android:textColor="@color/colorPrimaryDark"
                                android:textSize="12sp" />
                        </RelativeLayout>

                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/Over_Two_Away"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".33"
                    android:layout_margin="6dp"
                    card_view:cardCornerRadius="4dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/Over_Two_Away_Text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight=".25"
                            android:gravity="center"
                            android:text="@string/over_2.5"
                            android:textAppearance="?android:attr/textAppearanceSmall"/>

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="35dp"
                            android:layout_weight=".55">

                            <ProgressBar
                                android:id="@+id/Over_Two_Away_Percentage_Bar"
                                style="?android:attr/progressBarStyleHorizontal"
                                android:layout_width="120dp"
                                android:layout_height="150dp"
                                android:indeterminate="false"
                                android:max="100"
                                android:progress="0"
                                android:layout_centerInParent="true"
                                android:progressDrawable="@drawable/circular"
                                android:secondaryProgress="100"
                                />

                            <TextView
                                android:id="@+id/Over_Two_Away_Percentage_Text"
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:gravity="center"
                                android:text="@string/not_applicable"
                                android:layout_centerInParent="true"
                                android:textColor="@color/colorPrimaryDark"
                                android:textSize="12sp" />
                        </RelativeLayout>

                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/Over_One_Away"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".33"
                    android:layout_margin="6dp"
                    card_view:cardCornerRadius="4dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/Over_One_Away_Text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight=".25"
                            android:gravity="center"
                            android:text="@string/over_1.5"
                            android:textAppearance="?android:attr/textAppearanceSmall"/>

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="35dp"
                            android:layout_weight=".55">

                            <ProgressBar
                                android:id="@+id/Over_One_Away_Percentage_Bar"
                                style="?android:attr/progressBarStyleHorizontal"
                                android:layout_width="120dp"
                                android:layout_height="150dp"
                                android:indeterminate="false"
                                android:max="100"
                                android:progress="0"
                                android:layout_centerInParent="true"
                                android:progressDrawable="@drawable/circular"
                                android:secondaryProgress="100"
                                />

                            <TextView
                                android:id="@+id/Over_One_Away_Percentage_Text"
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:gravity="center"
                                android:text="@string/not_applicable"
                                android:layout_centerInParent="true"
                                android:textColor="@color/colorPrimaryDark"
                                android:textSize="12sp" />
                        </RelativeLayout>

                    </LinearLayout>

                </android.support.v7.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal"
                android:layout_weight=".4">

                <android.support.v7.widget.CardView
                    android:id="@+id/First_Half_Away"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".33"
                    android:layout_margin="6dp"
                    card_view:cardCornerRadius="4dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/First_Half_Away_Text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight=".25"
                            android:gravity="center"
                            android:text="@string/first_half"
                            android:textAppearance="?android:attr/textAppearanceSmall"/>

                        <TextView
                            android:id="@+id/First_Half_Away_Percentage_Text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight=".75"
                            android:gravity="center"
                            android:text="@string/not_applicable"
                            android:textAppearance="?android:attr/textAppearanceMedium"/>

                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/Goals_For_Away"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".33"
                    android:layout_margin="6dp"
                    card_view:cardCornerRadius="4dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/Goals_For_Away_Text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight=".25"
                            android:gravity="center"
                            android:text="@string/average_for"
                            android:textAppearance="?android:attr/textAppearanceSmall"/>

                        <TextView
                            android:id="@+id/Goals_For_Away_Percentage_Text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight=".75"
                            android:gravity="center"
                            android:text="@string/not_applicable"
                            android:textAppearance="?android:attr/textAppearanceMedium"/>

                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/Goals_Against_Away"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".33"
                    android:layout_margin="6dp"
                    card_view:cardCornerRadius="4dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/Goals_Against_Away_Text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight=".25"
                            android:gravity="center"
                            android:text="@string/average_against"
                            android:textAppearance="?android:attr/textAppearanceSmall"/>

                        <TextView
                            android:id="@+id/Goals_Against_Away_Percentage_Text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight=".75"
                            android:gravity="center"
                            android:text="@string/not_applicable"
                            android:textAppearance="?android:attr/textAppearanceMedium"/>

                    </LinearLayout>

                </android.support.v7.widget.CardView>

            </LinearLayout>


        </LinearLayout>
    </LinearLayout>
</layout>
